@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.scalecube</groupId>
   <artifactId>scalecube-parent-pom</artifactId>
-  <version>0.1.2-SNAPSHOT</version>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>ScaleCube parent project</name>
 
@@ -20,23 +22,20 @@
     </license>
   </licenses>
 
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/scalecube/${project.artifactId}</url>
+    </repository>
+  </distributionManagement>
+
   <scm>
     <url>https://scalecube.io</url>
     <connection>scm:git:git@github.com:scalecube/scalecube-parent.git</connection>
     <developerConnection>scm:git:git@github.com:scalecube/scalecube-parent.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-      <id>ossrh</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
 
   <prerequisites>
     <maven>3.3.9</maven>
@@ -55,15 +54,15 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- plugins versions -->
-    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-    <maven-surefire-plugin.version>3.0.0-M1</maven-surefire-plugin.version>
+    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+    <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+    <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-    <maven-release-plugin.version>3.0.0-M2</maven-release-plugin.version>
-    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
-    <maven-pmd-plugin.version>3.13.0</maven-pmd-plugin.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
+    <maven-pmd-plugin.version>3.10.0</maven-pmd-plugin.version>
     <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
     <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
@@ -75,10 +74,12 @@
     <com.puppycrawl.tools.checkstyle-version>8.14</com.puppycrawl.tools.checkstyle-version>
 
     <dockerfile.repository>scalecube/${project.artifactId}</dockerfile.repository>
-    <dockerfile.maven.version>1.4.6</dockerfile.maven.version>
+    <dockerfile.maven.version>1.4.13</dockerfile.maven.version>
     <dockerfile.maven.extension.version>1.4.6</dockerfile.maven.extension.version>
     <dockerfile.useMavenSettingsForAuth>true</dockerfile.useMavenSettingsForAuth>
     <dockerfile.googleContainerRegistryEnabled>false</dockerfile.googleContainerRegistryEnabled>
+
+    <github.repository>${env.GITHUB_REPOSITORY}</github.repository>
   </properties>
 
   <reporting>
@@ -204,11 +205,6 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
-          <configuration>
-            <argLine>
-              --illegal-access=permit
-            </argLine>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.jacoco</groupId>
@@ -239,6 +235,8 @@
             <releaseProfiles>release</releaseProfiles>
             <tagNameFormat>v@{project.version}</tagNameFormat>
             <goals>deploy</goals>
+            <username>${env.GITHUB_ACTOR}</username>
+            <password>${env.GITHUB_TOKEN}</password>
           </configuration>
         </plugin>
         <plugin>
@@ -267,7 +265,7 @@
                     <message>The reactor is not valid</message>
                     <ignoreModuleDependencies>true</ignoreModuleDependencies>
                   </reactorModuleConvergence>
-                  <dependencyConvergence />
+                  <dependencyConvergence/>
                 </rules>
               </configuration>
             </execution>
@@ -338,34 +336,25 @@
               <id>default</id>
               <goals>
                 <goal>build</goal>
-                <goal>tag</goal>
               </goals>
+              <phase>install</phase>
               <configuration>
                 <buildArgs>
                   <EXECUTABLE_JAR>${project.build.finalName}</EXECUTABLE_JAR>
+                  <SERVICE_NAME>${project.artifactId}</SERVICE_NAME>
+                  <SERVICE_VERSION>${project.version}</SERVICE_VERSION>
                 </buildArgs>
                 <tag>latest</tag>
-                <tag>${project.version}</tag>
               </configuration>
             </execution>
             <execution>
-              <id>create-extra-tags</id>
+              <id>extra-tag</id>
               <goals>
                 <goal>tag</goal>
               </goals>
+              <phase>install</phase>
               <configuration>
-                <tag>${extratags}</tag>
-                <skipTag>${noextratags}</skipTag>
-              </configuration>
-            </execution>
-            <execution>
-              <id>deployment</id>
-              <goals>
-                <goal>push</goal>
-              </goals>
-              <configuration>
-                <tag>latest</tag>
-                <tag>${project.version}</tag>
+                <tag>${docker.image.extra-tag}</tag>
               </configuration>
             </execution>
             <execution>
@@ -373,12 +362,50 @@
               <goals>
                 <goal>push</goal>
               </goals>
+              <phase>deploy</phase>
               <configuration>
-                <tag>${extratags}</tag>
-                <skip>${noextratags}</skip>
+                <tag>${docker.image.extra-tag}</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>tag-version</id>
+              <goals>
+                <goal>tag</goal>
+              </goals>
+              <phase>install</phase>
+              <configuration>
+                <tag>${docker.image.tag}</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>deployment</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>latest</tag>
+              </configuration>
+            </execution>
+            <execution>
+              <id>tag-deployment</id>
+              <goals>
+                <goal>push</goal>
+              </goals>
+              <phase>deploy</phase>
+              <configuration>
+                <tag>${docker.image.tag}</tag>
               </configuration>
             </execution>
           </executions>
+          <configuration>
+            <repository>docker.pkg.github.com/${github.repository}/${project.artifactId}
+            </repository>
+            <username>${env.GITHUB_ACTOR}</username>
+            <password>${env.GITHUB_TOKEN}</password>
+            <googleContainerRegistryEnabled>false</googleContainerRegistryEnabled>
+            <skipDockerInfo>true</skipDockerInfo>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
